--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
